--- a/src/assets/styles/global.tailwind.css
+++ b/src/assets/styles/global.tailwind.css
@@ -4,3 +4,8 @@
 
 @import 'swiper/css';
 @import 'swiper/css/navigation';
+
+a {
+    /* color: orange !important; */
+    text-decoration: none !important;
+}
